--- a/deploy/kubeovn-operator/templates/deployment.yaml
+++ b/deploy/kubeovn-operator/templates/deployment.yaml
@@ -30,6 +30,7 @@ spec:
         command:
         - /manager
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         livenessProbe:
           httpGet:
             path: /healthz
