--- a/.github/workflows/template-build.yml
+++ b/.github/workflows/template-build.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - uses: actions/setup-go@v6
+        with:
+          go-version: '1.25'
+
       - name: Run build and test
         run: make
 
