--- a/deploy/kubeovn-operator/templates/deployment.yaml
+++ b/deploy/kubeovn-operator/templates/deployment.yaml
@@ -26,6 +26,9 @@ spec:
         - --health-probe-bind-address=:8081
         - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
         - --namespace={{ .Release.Namespace }}
+        {{- if .Values.enableConfiguration }}
+        - --default-config-path=/etc/kubeovn-operator/default-config
+        {{- end }}
         command:
         - /manager
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -62,6 +65,11 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: webhook-certs
           readOnly: true
+        {{- if .Values.enableConfiguration }}
+        - mountPath: /etc/kubeovn-operator/default-config
+          name: default-config
+          readOnly: true
+        {{- end }}
       securityContext:
         runAsNonRoot: true
         seccompProfile:
@@ -72,3 +80,8 @@ spec:
       - name: webhook-certs
         secret:
           secretName: webhook-certs
+      {{- if .Values.enableConfiguration }}
+      - name: default-config
+        configMap:
+          name: kubeovn-config
+      {{- end }}
